# rusty-dns

./: .gitmodules  Cargo.toml  README.md
benches/: dns_client.rs
benches/relative_walltime/: mod.rs
src/: lib.rs  main.rs
src/cache/: mod.rs
src/dns/: mod.rs  parse.rs
