[package]
name = "rusty-dns"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"

[lib]
name = "rusty_dns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
trust-dns-client = { version = "*", default-features = false }
trust-dns-proto = "0.19.2"
failure = "0.1"

[dev-dependencies]
criterion = "0.3"
trust-dns-resolver = "0.19.2"

[[bench]]
name = "dns_client"
harness = false


