[package]
name = "rusty-dns"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"

[lib]
name = "rusty_dns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["udp", "rt-threaded", "rt-core", "macros"] }
trust-dns-proto = "0.19.2"
failure = "0.1"
lru-cache = "0.1"
log = "0.4"
pretty_env_logger = "0.3"

[dev-dependencies]
criterion = "0.3"
trust-dns-client = { version = "*", default-features = false }
trust-dns-resolver = "0.19.2"

[[bench]]
name = "dns_client"
harness = false


